--- a/css/style.css
+++ b/css/style.css
@@ -1,90 +1,3 @@
-/*
---- 01 TYPOGRAPHY SYSTEM
-
--Font sizes (px)
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 
-
--Font weights:
-default: 400
-
--Line heights:
-default: 1
-
---- 02 COLORS
-
--Primary: #e67e22
--Tints: #fdf2e9
--Shades: #cf711f
--Accents:
--Greys: #555
- #333
-
---- 05 SHADOWS
-
---- 06 BORDER-RADIUS
-
---- 07 SPACING-SYSTEM
-
--SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-      
-*/
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-body {
-  font-family: "Rubik", sans-serif;
-  color: #555;
-  font-weight: 400;
-  line-height: 1;
-}
-
-/***********************/
-/*GENERAL REUSABLE */
-/***********************/
-.btn:link,
-.btn:visited {
-  display: inline-block;
-  padding: 1.6rem 3.2rem;
-  font-size: 2rem;
-  font-weight: 600;
-  text-decoration: none;
-  border-radius: 9px;
-
-  transition: background-color 0.3s;
-}
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fdf2e9;
-  color: #555;
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-  box-shadow: inset 0 0 0 3px #fff;
-}
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /***********************/
 /*HEADER*/
 /***********************/
@@ -139,10 +52,10 @@ body {
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
 }
+
 /***********************/
 /*HERO SECTION*/
 /***********************/
-
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
@@ -159,14 +72,7 @@ body {
 }
 .hero-text-box {
 }
-.primary-heading {
-  font-size: 5.2rem;
-  font-weight: 700;
-  color: #333;
-  line-height: 1.05;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
+
 .hero-description {
   font-size: 2rem;
   font-weight: 500;
@@ -205,4 +111,58 @@ body {
 .delivered-text span {
   color: #cf711f;
   font-weight: 700;
+}
+
+/***********************/
+/*HOW TO WORK SECTION*/
+/***********************/
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-text-box {
+}
+.step-number {
+  font-size: 8.6rem;
+  color: #ddd;
+  font-weight: 600;
+  margin-bottom: 1.2rem;
+}
+.tertiary-heading {
+}
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+}
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+}
+.step-img-box::before {
+  width: 60%;
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  z-index: -2;
+}
+.step-img-box::after {
+  width: 45%;
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+.step-img {
+  width: 35%;
 }
