--- a/css/general.css
+++ b/css/general.css
@@ -111,7 +111,7 @@ body {
   text-decoration: none;
   border-radius: 9px;
 
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -134,6 +134,29 @@ body {
   color: #555;
   box-shadow: inset 0 0 0 3px #fff;
 }
+.link:link,
+.link:visited {
+  text-decoration: none;
+  color: #e67e22;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 500;
 }
