--- a/css/general.css
+++ b/css/general.css
@@ -108,6 +108,7 @@ body {
   line-height: 1.2;
   margin-bottom: 3.2rem;
 }
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -118,6 +119,11 @@ body {
   border-radius: 9px;
 
   transition: all 0.3s;
+
+  /* only for button in cta section */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -139,6 +145,16 @@ body {
   background-color: #fdf2e9;
   color: #555;
   box-shadow: inset 0 0 0 3px #fff;
+}
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+.btn--form:hover {
+  color: #555;
+  background-color: #fdf2e9;
 }
 .link:link,
 .link:visited {
@@ -169,6 +185,11 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 .margin-right-sm {
   margin-right: 1.6rem !important;
