footer sections complete (complete desktop version)

--- a/css/general.css
+++ b/css/general.css
@@ -42,7 +42,7 @@ html {
 body {
   font-family: "Rubik", sans-serif;
   color: #555;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1;
 }
 
@@ -74,6 +74,9 @@ body {
 }
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 .grid--center-v {
   align-items: center;
