Add Media Queries for(small desktop, landscape tablets, tablets) && Make Mobile Navigation(menu button)

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 .main-nav-list {
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
   list-style: none;
 }
 .main-nav-link:link,
@@ -51,6 +51,25 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+
+/***********************/
+/*Mobile Nav Button*/
+/***********************/
+
+.btn-mobile-nav {
+  border: none;
+  cursor: pointer;
+  background: none;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /***********************/
