--- a/css/general.css
+++ b/css/general.css
@@ -38,12 +38,14 @@ default: 1
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: "Rubik", sans-serif;
   color: #555;
   font-weight: 500;
   line-height: 1;
+  overflow-x: hidden;
 }
 
 /***********************/
@@ -183,6 +185,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 .list-icon {
   width: 3rem;
